# Dynamic-Diffuse-Global-Illumination-Minecraft

./: .gitignore  CMakeLists.txt  README.md  contributors.md
assets/shaders/: camera.glsl  compute_pass.comp  compute_pass.comp.spv  debug_vis.frag  debug_vis.vert  debug_vis.vert.spv  distance_functions.glsl  fullscreen_tri.vert  fullscreen_tri.vert.spv  integrators.glsl  intersection.glsl  lightfieldprobe.glsl  material.glsl  probe_pass.comp  probe_pass.comp.spv  samples_mapping.glsl  structs.glsl  tex_sample.frag  tex_sample.frag.spv  util.glsl
code/: .clang-format  CMakeLists.txt
code/assets/shaders/: compute_pass.comp  compute_pass.comp.spv  debug_vis.frag.spv  integrators.glsl  intersection.glsl  structs.glsl
code/src/rvpt/: irradiance_field.cpp  irradiance_field.h  main.cpp  material.h  rvpt.cpp  rvpt.h  timer.h  vk_util.h
scripts/: compile_shaders.bat  compile_shaders.sh  project_configuration.json.in
src/rvpt/: camera.cpp  camera.h  geometry.h  imgui_helpers.h  imgui_impl.cpp  imgui_impl.h  main.cpp  probe.h  rvpt.cpp  rvpt.h  timer.cpp  vk_util.cpp  vk_util.h  window.cpp  window.h
